--- a/CaChepFinal/Areas/Admin/Views/DatPhong/Index.cshtml
+++ b/CaChepFinal/Areas/Admin/Views/DatPhong/Index.cshtml
@@ -5,7 +5,7 @@
 <h1>Dat Phong</h1>
 
 <p>
-    <a asp-controller="DatPhong" asp-action="Create">Create PhieuDatPhong</a>
+    <a asp-controller="Home" asp-action="index">Create PhieuDatPhong</a>
 </p>
 <table class="table">
     <thead>
@@ -75,7 +75,7 @@
 }
     </tbody>
 </table>
-
+<h2>Thong tin chi tiet dat phong</h2>
 <table class="table">
     <thead>
         <tr>
