--- a/CaChepFinal/Areas/Cus/_ViewImports.cshtml
+++ b/CaChepFinal/Areas/Cus/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 @using CaChepFinal
 @using CaChepFinal.Models
 @using CaChepFinal.Data
+@using CaChepFinal.Models.ViewModels
+
+
 
 @addTagHelper *, MyWebApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
