--- a/CaChepFinal/Areas/Admin/Views/DatPhong/Index.cshtml
+++ b/CaChepFinal/Areas/Admin/Views/DatPhong/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Dat Phong</h1>
+<h1>Danh Sach Phieu Dat Phong</h1>
 
 <p>
     <a asp-controller="Home" asp-action="index">Create PhieuDatPhong</a>
@@ -41,6 +41,7 @@
         </tr>
     </thead>
     <tbody>
+
 @foreach (var item in Model.datPhongs) {
         <tr>
             <td>
@@ -70,47 +71,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserId)
             </td>
-           
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
         </tr>
 }
     </tbody>
 </table>
-<h2>Thong tin chi tiet dat phong</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.chiTietDatPhongs[0].TongSoNgay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.chiTietDatPhongs[0].GiaTienMotNgay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.chiTietDatPhongs[0].Phong)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.chiTietDatPhongs[0].DatPhong)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.chiTietDatPhongs) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TongSoNgay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GiaTienMotNgay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phong.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DatPhong.Id)
-            </td>
-        
-        </tr>
-}
-    </tbody>
-</table>
+
+
