--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/Index.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/Index.cshtml
@@ -11,6 +11,29 @@
     <a asp-controller="Create" asp-action="Create">Dat phong</a>
 </p>
 <form asp-controller="DatPhong" asp-action="Index" method="get">
+    <p>
+
+        <select asp-for="TrangThai" asp-items="Model.ListNameTrangThai">
+            <option value="">All</option>
+        </select>
+
+        @*Title: <input type="text" asp-for="SearchString" />*@
+
+        <div class="form-group">
+            <label asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="control-label"></label>
+            <input asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="form-control" />
+            <span asp-validation-for="newDatPhong.ThoiGianNhanPhongDuKien" class="text-danger"></span>
+        </div>
+        @*<div class="form-group">
+            <label asp-for="PhieuDatPhong.NgayTraDuTinh" class="control-label"></label>
+            <input asp-for="PhieuDatPhong.NgayTraDuTinh" class="form-control" />
+            <span asp-validation-for="PhieuDatPhong.NgayTraDuTinh" class="text-danger"></span>
+        </div>*@
+
+        <input type="submit" value="Filter" />
+        @*Ngày : <input type="text" asp-for="SearchString" />
+            <input type="submit" value="Filter" />*@
+    </p>
 </form>
 <table class="table">
     <thead>
@@ -39,9 +62,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.datPhongs[0].ThoiGianTraPhongDuKien)
             </th>dichvu
-            <th>
-                @Html.DisplayNameFor(model => model.datPhongs[0].UserId)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -74,9 +95,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.ThoiGianTraPhongDuKien)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserId)
-                </td>
+                
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
