--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/Index.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>DS Phieu Dat Phong</h1>
 
 <p>
-    <a asp-controller="Create" asp-action="Create">Dat phong</a>
+    <a asp-controller="DatPhong" asp-action="CreateDatPhong">Dat phong</a>
 </p>
 <form asp-controller="DatPhong" asp-action="Index" method="get">
     <p>
@@ -16,23 +16,13 @@
         <select asp-for="TrangThai" asp-items="Model.ListNameTrangThai">
             <option value="">All</option>
         </select>
-
-        @*Title: <input type="text" asp-for="SearchString" />*@
-
         <div class="form-group">
-            <label asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="control-label"></label>
-            <input asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="form-control" />
-            <span asp-validation-for="newDatPhong.ThoiGianNhanPhongDuKien" class="text-danger"></span>
-        </div>
-        @*<div class="form-group">
-            <label asp-for="PhieuDatPhong.NgayTraDuTinh" class="control-label"></label>
-            <input asp-for="PhieuDatPhong.NgayTraDuTinh" class="form-control" />
-            <span asp-validation-for="PhieuDatPhong.NgayTraDuTinh" class="text-danger"></span>
-        </div>*@
+            <label asp-for="newDatPhong.ThoiGianNhanPhongDuKien.Date" class="control-label"></label>
 
+            <input asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="form-control" />
+        </div>
+        CMND: <input type="text" asp-for="CMND" />
         <input type="submit" value="Filter" />
-        @*Ngày : <input type="text" asp-for="SearchString" />
-            <input type="submit" value="Filter" />*@
     </p>
 </form>
 <table class="table">
@@ -62,46 +52,49 @@
             <th>
                 @Html.DisplayNameFor(model => model.datPhongs[0].ThoiGianTraPhongDuKien)
             </th>dichvu
-            
-            <th></th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.datPhongs[0].GetTrangThai.Name)
+            </th>
         </tr>
     </thead>
     <tbody>
 
         @foreach (var item in Model.datPhongs)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TenNguoiDat)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CMND)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SDT)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TienDatCoc)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ThoiGianNhanPhongDuKien)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ThoiGianTraPhongDuKien)
-                </td>
-                
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TenNguoiDat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CMND)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SDT)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TienDatCoc)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ThoiGianNhanPhongDuKien)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ThoiGianTraPhongDuKien)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GetTrangThai.Name)
+            </td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
