--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using CaChepFinal2.Extensions
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +29,31 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssPhongCart") != null)
+                        {
+                            <li style="color:white">
+                                <a class="nav-link">
+                                    <i class="fas fa-shopping-cart"></i> &nbsp;
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssPhongCart").Count;
+                                    }
+                                    (@count)
+                                </a>
+
+                            </li>
+
+                        }
+                        else
+                        {
+                            <li style="color:white">
+                                <a  class="nav-link">
+                                    <i class="fas fa-shopping-cart"></i> &nbsp;
+                                    (0)
+                                </a>
+
+                            </li>
+
+                        }
                     </ul>
                 </div>
             </div>
