--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/addPhong.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/addPhong.cshtml
@@ -1,6 +1,8 @@
-﻿
-@model IEnumerable<CaChepFinal2.Data.Phong>
+﻿@model IEnumerable<CaChepFinal2.Data.Phong>
+@using CaChepFinal2.Extensions
+@using Microsoft.AspNetCore.Http
 
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewData["Title"] = "addPhong";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,7 +10,7 @@
 
 <h1>Chọn Phòng thuê</h1>
 <div>
-    <a  asp-action="CreateDatPhong">Back</a>
+    <a asp-action="CreateDatPhong">Back</a>
 </div>
 <table class="table">
     <thead>
@@ -57,7 +59,25 @@
                     @Html.DisplayFor(modelItem => item.GetLoaiPhong.Id)
                 </td>
                 <td>
-                    <a asp-action="addPhong" asp-route-id="@item.Id">Chọn Phòng</a> |
+                    <div class="form-group">
+                        @{
+                            bool isInBag = false;
+                            List<int> lstCart = HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssPhongCart");
+                            if (lstCart != null && lstCart.Contains(item.Id)) { isInBag = true; }
+                        }
+                        @if (isInBag)
+                        {
+                            <button type="submit" value="Remove khỏi phiếu" asp-action="remove" asp-route-id="@item.Id" class="btn btn-danger form-control">Remove From Phiếu</button>
+
+                        }
+                        else
+                        {
+                            <button type="submit" value="Add vào phiếu" asp-action="addPhong" asp-route-id="@item.Id" class="btn btn-primary form-control">Add To Phiếu</button>
+                            @*<a asp-action="addPhong" asp-route-id="@item.Id">Details</a>*@ 
+
+                        }
+
+                    </div>
                 </td>
             </tr>
         }
