--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/DetailsDatPhong.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/DetailsDatPhong.cshtml
@@ -72,7 +72,7 @@
 @* Bang Phong *@
 <h2>Danh sách Phòng</h2>
 <p>
-    <a asp-action="Create">Them Phong</a>
+    <a asp-action="IndexPhong">Them Phong</a>
 </p>
 <table class="table">
     <thead>
@@ -121,7 +121,7 @@
 @* Bang DichVu *@
 
 <h2>Danh sách Dịch Vụ</h2>
-<p><a asp-action="Create">Them Dich Vu</a></p>
+<p><a asp-action="IndexDichVu">Them Dich Vu</a></p>
 
 
 <table class="table">
