--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexDichVu.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexDichVu.cshtml
@@ -1,14 +1,16 @@
-﻿@model IEnumerable<CaChepFinal2.Data.Phong>
+﻿@model IEnumerable<CaChepFinal2.Data.DichVu>
 @using CaChepFinal2.Extensions
 @using Microsoft.AspNetCore.Http
 
 @inject IHttpContextAccessor HttpContextAccessor
+
 @{
-    ViewData["Title"] = "addPhong";
+    ViewData["Title"] = "IndexDichVu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Chọn Phòng thuê</h1>
+
+<h1>Chọn Dịch Vụ </h1>
 <div>
     <a asp-action="CreateDatPhong">Back</a>
 </div>
@@ -24,15 +26,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GetLoaiPhong)
-            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.ImageUrl)
+                </th>*@
+
             <th></th>
         </tr>
     </thead>
@@ -49,31 +46,26 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ImageUrl)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TrangThai)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GetLoaiPhong.Id)
-                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.ImageUrl)
+                    </td>*@
                 <td>
                     <div class="form-group">
                         @{
                             bool isInBag = false;
-                            List<int> lstCart = HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssPhongCart");
+                            List<int> lstCart = HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssDichVuCart");
                             if (lstCart != null && lstCart.Contains(item.Id)) { isInBag = true; }
                         }
                         @if (isInBag)
                         {
-                            <button type="submit" value="Remove khỏi phiếu" asp-action="remove" asp-route-id="@item.Id" class="btn btn-danger form-control">Remove From Phiếu</button>
+                            @*<button type="submit" value="Remove khỏi phiếu" asp-action="remove" asp-route-id="@item.Id" class="btn btn-danger form-control">Remove From Phiếu</button>*@
+                            <a asp-action="Remove" asp-route-id="@item.Id">Xóa</a>
 
                         }
                         else
                         {
-                            <button type="submit" value="Add vào phiếu" asp-action="addPhong" asp-route-id="@item.Id" class="btn btn-primary form-control">Add To Phiếu</button>
-                            @*<a asp-action="addPhong" asp-route-id="@item.Id">Details</a>*@ 
+                            @*<button type="submit" value="Add vào phiếu" asp-action="addPhong" asp-route-id="@item.Id" class="btn btn-primary form-control">Add To Phiếu</button>*@
+                            <a asp-action="DetailsDichVu" asp-route-id="@item.Id">Thêm</a>
 
                         }
 
@@ -83,4 +75,3 @@
         }
     </tbody>
 </table>
-
