--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
@@ -71,10 +71,8 @@
             </div>
         </nav>
     </header>
-    <div class="container bg1">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container-fluid-0">
+        @RenderBody()
     </div>
 
 
