--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
@@ -7,8 +7,6 @@
         padding:0;
         box-sizing:border-box;
         text-align:center;
-        
-        
     }
     .layout
     {
@@ -16,7 +14,9 @@
         height:50rem;
         background-image:url("../images/bn1.jpg")
         
+        
     }
+    
     h1
     {
         text-align:center;
@@ -25,8 +25,9 @@
         font-style:normal;
         font-size:30px;
         line-height:33px;
-        color:#737373;
+        color:blueviolet;
     }
+
     .card img
     {
         width:600px;
@@ -36,44 +37,62 @@
     {
         transform:scale(1.2);
     }
+  
     .window
     {
         justify-content:center;
-        width:1274px;
+        width:1250px;
         position:relative;
-        height:370px;
+        height:350px;
     }
     .split-screen-cta
     {
         width:50%;
         position:absolute;
         height:100%;
-        -webkit-transition: width 1s;
         transition: width 1s;
+        background-position:50%, 50%;
+        background-size:cover;
     }
     .left-half
     {
         left:0px;
+        width:50%;
+        background-image:url("~/images/img-overview.jpg")
+
     }
     .left-half:hover
     {
-        width: 75%;
+        width: 60%;
+        transform:scale(1);
     }
     .right-half
     {
         right:0px;
+        width: 50%;
+    }
+    .right-half:hover
+    {
+        width:60%;
+        transform:scale(1);
+    }
+    #button
+    {
+        text-align:center;
     }
     
 </style>
-<div class="container">
+<div class="container-fluid">
     <div class="layout">
+        <br />
+        <br />
         <h1>Trải nghiệm. Thư giản. Khám phá.</h1>
     </div>
-    <div class="container overview">
-        <div class="row">
+    <div class="container overview text-center">
+        <div class="row" >
             <h1>WELCOME TO CICI HOTEL</h1>
             <img class="img-overview" src="~/images/img-overview.jpg" alt="Welcome to CiCi Hotel" style="max-width:100%" />
-            <p class="showMore" style="text-align:center">
+            <p class="showMore">
                 Cici Hotel is located in the west of Hanoi. Cici Hotel is a great destination and brings you the most enjoyable
                 experience when you come to us. Come to Cici Hotel, you will be immersed in fresh nature, to participate in leisure activities,
                 relax to take away the sorrows and chaos of life. Cici Hotel with all kinds of amenities and mordern bungalows combined, traditional
@@ -81,7 +100,7 @@
             </p>
             <div class="form-group">
                 <a asp-area="Admin" asp-controller="Phongs" asp-action="Index">
-                    <input type="submit" value="MAKE A RESERVATION" class="btn btn-primary" />
+                    <p id="button"><input type="submit" value="MAKE A RESERVATION" class="btn btn-primary" /></p>
                 </a>
             </div>
         </div>
