--- a/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
@@ -6,15 +6,13 @@
         margin:0;
         padding:0;
         box-sizing:border-box;
-        text-align:center;
+        /*text-align:center;*/
     }
     .layout
     {
         width:87rem;
         height:50rem;
         background-image:url("../images/bn1.jpg")
-        
-        
     }
     
     h1
@@ -99,9 +97,7 @@
                 style, restaurant system, conference room,&nbsp;...
             </p>
             <div class="form-group">
-                <a asp-area="Admin" asp-controller="Phongs" asp-action="Index">
-                    <p id="button"><input type="submit" value="MAKE A RESERVATION" class="btn btn-primary" /></p>
-                </a>
+                <button onclick="alert('Please contact to our receptionist by calling 028 3896 8641')">MAKE A RESERVATION</button>
             </div>
         </div>
         <div class="row">
