--- a/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexDichVu.cshtml
+++ b/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexDichVu.cshtml
@@ -59,13 +59,15 @@
                         @if (isInBag)
                         {
                             @*<button type="submit" value="Remove khỏi phiếu" asp-action="remove" asp-route-id="@item.Id" class="btn btn-danger form-control">Remove From Phiếu</button>*@
-                            <a asp-action="Remove" asp-route-id="@item.Id">Xóa</a>
+                            <a asp-action="RemoveDVFromCart" asp-route-id="@item.Id">Xóa</a>
 
                         }
                         else
                         {
                             @*<button type="submit" value="Add vào phiếu" asp-action="addPhong" asp-route-id="@item.Id" class="btn btn-primary form-control">Add To Phiếu</button>*@
-                            <a asp-action="DetailsDichVu" asp-route-id="@item.Id">Thêm</a>
+                            @*<a asp-action="DetailsDichVu" asp-route-id="@item.Id">Thêm</a>*@
+
+                            <a asp-action="AddDVFromCart" asp-route-id="@item.Id">Thêm</a>
 
                         }
 
