--- a/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexPhong.cshtml
+++ b/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhong/IndexPhong.cshtml
@@ -68,13 +68,14 @@
                     @if (isInBag)
                     {
                         @*<button type="submit" value="Remove khỏi phiếu" asp-action="remove" asp-route-id="@item.Id" class="btn btn-danger form-control">Remove From Phiếu</button>*@
-                        <a asp-action="RemoveDVFromCart" asp-route-id="@item.Id">Xóa</a>
-
+                        <a asp-action="RemovePhongFromCart" asp-route-id="@item.Id">Xóa</a>
                     }
                     else
                     {
-                        @*<button type="submit" value="Add vào phiếu" asp-action="addPhong" asp-route-id="@item.Id" class="btn btn-primary form-control">Add To Phiếu</button>*@
-                        <a asp-action="DetailsPhong" asp-route-id="@item.Id">Thêm</a>
+                        @*<a asp-action="DetailsPhong" asp-route-id="@item.Id">Thêm</a>*@
+                        <a asp-action="AddPhongFromCart" asp-route-id="@item.Id">Thêm</a>
+                        @*<form asp-action="DetailsPhong" asp-route-id="@item.Id" method="post">Xóa</form>*@
+
 
                     }
 
