--- a/04-12-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhongCart/Index.cshtml
+++ b/04-12-2019/CaChepFinal2/CaChepFinal2/Areas/Admin/Views/DatPhongCart/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Danh sách Phòng</h2>
 <p>
-    <a asp-action="IndexPhong" class="btn btn-primary">Them Phong</a>
+    <a asp-action="GetListPhong" class="btn btn-primary">Them Phong</a>
 </p>
 @if (Model.LsPhongDatPhongs != null)
 {
@@ -51,7 +51,7 @@
 @* Bang DichVu *@
 
 <h2>Danh sách Dịch Vụ</h2>
-<p><a asp-action="IndexDichVu" class="btn btn-primary">Them Dich Vu</a></p>
+<p><a asp-action="GetListDichVu" class="btn btn-primary">Them Dich Vu</a></p>
 
 @if (Model.LsDichVuDatPhongs != null)
 {
@@ -96,9 +96,66 @@
     </div>
     <div class="col-4">
         <div class="btn-group" role="group" aria-label="Basic example">
-            <a asp-action="CreateDatPhongXacNhan" class="btn btn-danger btn-secondary">XÁC NHẬN</a>
+            <a asp-action="XacNhanDatPhong" class="btn btn-danger btn-secondary">XÁC NHẬN</a>
             <a asp-controller="DatPhongs" asp-action="Index" class="btn btn-secondary">TRỞ VỀ</a>
         </div>
     </div>
+</div>
 
+<h4>DatPhong</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="XacNhanDatPhong">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.TenNguoiDat" class="control-label"></label>
+                <input asp-for="newDatPhong.TenNguoiDat" class="form-control" />
+                <span asp-validation-for="newDatPhong.TenNguoiDat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.Address" class="control-label"></label>
+                <input asp-for="newDatPhong.Address" class="form-control" />
+                <span asp-validation-for="newDatPhong.Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.Cmnd" class="control-label"></label>
+                <input asp-for="newDatPhong.Cmnd" class="form-control" />
+                <span asp-validation-for="newDatPhong.Cmnd" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.Sdt" class="control-label"></label>
+                <input asp-for="newDatPhong.Sdt" class="form-control" />
+                <span asp-validation-for="newDatPhong.Sdt" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.TienDatCoc" class="control-label"></label>
+                <input asp-for="newDatPhong.TienDatCoc" class="form-control" />
+                <span asp-validation-for="newDatPhong.TienDatCoc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="control-label"></label>
+                <input asp-for="newDatPhong.ThoiGianNhanPhongDuKien" class="form-control" />
+                <span asp-validation-for="newDatPhong.ThoiGianNhanPhongDuKien" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.ThoiGianTraPhongDuKien" class="control-label"></label>
+                <input asp-for="newDatPhong.ThoiGianTraPhongDuKien" class="form-control" />
+                <span asp-validation-for="newDatPhong.ThoiGianTraPhongDuKien" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.TongTien" class="control-label"></label>
+                <input asp-for="newDatPhong.TongTien" class="form-control" />
+                <span asp-validation-for="newDatPhong.TongTien" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="newDatPhong.AccoutId" class="control-label"></label>
+                <input asp-for="newDatPhong.AccoutId" class="form-control" />
+                <span asp-validation-for="newDatPhong.AccoutId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Đặt Phòng Xác nhận" class="btn btn-outline-primary" />
+            </div>
+        </form>
+    </div>
 </div>
