--- a/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
+++ b/CaChepFinal2/CaChepFinal2/Views/Shared/_Layout.cshtml
@@ -12,6 +12,9 @@
         <title>@ViewData["Title"] - Cici Hotel</title>
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 <body>
@@ -32,20 +35,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Customer" asp-controller="PhongCustomer" asp-action="IndexRoom">ROOM</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="LoaiPhongs" asp-action="Index">Loại phòng</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Phongs" asp-action="Index">Phòng</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="LoaiDichVus" asp-action="Index">Loại dịch vụ</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="DichVus" asp-action="Index">Dịch vụ</a>
-                        </li>
+                       
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="DatPhongs" asp-action="Index">Phiếu đặt phòng</a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="dropdown show">
+                                <a class="nav-link  text-light hvr-float dropdown-toggle fas fa-tools " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Phongs" asp-action="Index">Phòng</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="LoaiPhongs" asp-action="Index">Loại Phòng</a>
+                                    <a><hr /></a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="DichVus" asp-action="Index">Dịch Vụ</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="LoaiDichVus" asp-action="Index">Loại Dịch Vụ</a>
+                                    <a><hr /></a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="ChuongTrinhs" asp-action="Index">Chương Trình</a>
+                                    <a><hr /></a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="TrangThais" asp-action="Index">Trạng Thái</a>
+                                </div>
+                            </div>
                         </li>
 
                         @if (HttpContextAccessor.HttpContext.Session.Get<List<int>>("ssPhongCart") != null)
