--- a/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/PhongCustomer/IndexRoom.cshtml
+++ b/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/PhongCustomer/IndexRoom.cshtml
@@ -11,12 +11,11 @@
         padding: 0;
         box-sizing: border-box;
     }
+    .card {
+    margin-right: 20px;
+}
 
-    .layout {
-        background-image: url("~/images/layoyut/AnhChinh.png");
-        width: 100%;
-        height: 50rem;
-    }
+
 </style>
 
 <br />
@@ -25,8 +24,9 @@
 <div class="row">
     @foreach (var product in Model)
     {
-        <div class="col-4">
-            <div class="card mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">
                         <label style="font-size:23px;color:steelblue;">
@@ -34,7 +34,6 @@
                         </label>
                     </h4>
                 </div>
-
                 <img class="card-img-top" style="height:100%;" src="@product.HinhUrl" alt="Card Image" />
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
@@ -44,12 +43,16 @@
 
                             </label>
                         </div>
-                        <a asp-action="DetailsRoom" asp-controller="PhongCustomer" class="btn btn-success pull-right btn-outline-info" asp-route-id="@product.Id"> View Details</a>
+                        <div class="card-body">
+                            <p class="card-text">
+                                <a asp-action="DetailsRoom" asp-controller="PhongCustomer" class="btn btn-outline-primary" asp-route-id="@product.Id"> View Details</a>
+                            </p>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
-
-    }
+    </div>
+     }
 </div>
