--- a/CaChepFinal2/CaChepFinal2/wwwroot/css/site.css
+++ b/CaChepFinal2/CaChepFinal2/wwwroot/css/site.css
@@ -71,15 +71,84 @@ body {
 }
 
 
-/**//*/*//*/*//**/
+/**//*/*//*Truc*//*/*//**/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI';
     font-size: 16px;
-    font-weight:400;
-    line-height:21px;
-    color:#212529;
+    font-weight: 400;
+    line-height: 21px;
+    color: #212529;
+}
+/*NAVIGATION hover menu*/
+nav {
+    width: 80%;
+    margin: 0 auto;
+    background: #fff;
+    padding: 50px 0;
+    box-shadow: 0px 5px 0px #dedede;
+    background-size: cover;
 }
 
+nav ul {
+    list-style: none;
+    text-align: center;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+}
+
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+transition: all .5s;
+}
+
+nav ul li a:hover {
+    color: #555;
+}
+
+ul li a {
+position: relative;
+z-index: 1;
+}
+
+ul li a:hover {
+    color: #0abcd4;
+}
+
+ul li a:after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 100%;
+    height: 1px;
+    content: '.';
+    color: transparent;
+    background: #0abcd4;
+    visibility: none;
+    opacity: 0;
+    z-index: -1;
+}
+
+ul li a:hover:after {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+}
