--- a/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
+++ b/CaChepFinal2/CaChepFinal2/Areas/Customer/Views/Home/Index.cshtml
@@ -2,70 +2,90 @@
     ViewData["Title"] = "Home";
 }
 <style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        /*text-align:center;*/
+    }
+
+    .layout {
+        width: 100%;
+        height: 50rem;
+        background-image: url("../images/layout/bn1.jpg")
+    }
 
     h1 {
-        font-family: 'Annie Use Your Telescope', cursive;
+        text-align: center;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 200;
+        font-style: normal;
         font-size: 60px;
         line-height: 33px;
-        color: white;
+        color: blueviolet;
     }
 
-
-.window {
-    justify-content: center;
-    width: 1250px;
-    position: relative;
-    height: 350px;
-}
-
-.split-screen-cta {
-    width: 50%;
-    position: absolute;
-    height: 100%;
-    transition: width 1s;
-    background-position: 50%, 50%;
-    background-size: cover;
+    .card img {
+        width: 18rem;
+        transition: all 1s ease;
     }
- .layout {
-    width: 100%;
-    height: 50rem;
-    background-image: url("../images/layout/bn1.jpg");
-    background-size:cover;
-}
 
-.left-half {
-    left: 0px;
-    width: 50%;
-    background-image: url("~/images/img-overview.jpg")
-}
+    .card:hover img {
+        transform: scale(1.1);
+    }
 
-.left-half:hover {
-    width: 60%;
-    transform: scale(1);
-}
+    .window {
+        justify-content: center;
+        width: 1250px;
+        position: relative;
+        height: 350px;
+    }
 
-.right-half {
-    right: 0px;
-    width: 50%;
-}
+    .split-screen-cta {
+        width: 50%;
+        position: absolute;
+        height: 100%;
+        transition: width 1s;
+        background-position: 50%, 50%;
+        background-size: cover;
+    }
 
-.right-half:hover {
-    width: 60%;
-    transform: scale(1);
-}
+    .left-half {
+        left: 0px;
+        width: 50%;
+        background-image: url("~/images/img-overview.jpg")
+    }
 
+        .left-half:hover {
+            width: 60%;
+            transform: scale(1);
+        }
+
+    .right-half {
+        right: 0px;
+        width: 50%;
+    }
+
+        .right-half:hover {
+            width: 60%;
+            transform: scale(1);
+        }
+
+    #button {
+        text-align: center;
+    }
 </style>
 <div class="container-fluid">
     <div class="layout">
         <br />
         <br />
-        <h1>Explorer..Dreamer..Discover</h1>
+        <h1>EXPLORE..DREAM..DISCOVER</h1>
     </div>
     <br />
     <div class="overview text-center">
         <div class="row">
             <div class="container text-center">
-                <h2>WELCOME TO CICI HOTEL</h2>
+                <h1>WELCOME TO CICI HOTEL</h1>
                 <br />
                 <img class="img-overview" src="~/images/img-overview.jpg" alt="Welcome to CiCi Hotel" style="max-width:100%" />
                 <p class="showMore">
@@ -82,7 +102,7 @@
         <br />
         <div class="row">
             <div class="container text-center">
-                <h2>ACCOMODATION</h2>
+                <h1>ACCOMODATION</h1>
                 <br />
                 <div class="window">
                     <section class="split-screen-cta left-half">
@@ -110,7 +130,7 @@
             <br />
             <br />
             <div class="container text-center">
-                <h2>AT THE HOTEL</h2>
+                <h1>AT THE HOTEL</h1>
                 <br />
                 <div class="row justify-content-center">
                     <div class="col-md-4">
